# MACS

computer-architecture/: kchic22_hw1.asm  kchic22_hw2.asm  kchic22_hw3.asm  kchic22_hw4.asm
design-patterns/hw1/: Makefile  README.md  pyproject.toml
design-patterns/hw1/src/: __main__.py  creature.py
design-patterns/hw1/src/constraints/: config_movements.py  constraints.py  enums.py
design-patterns/hw1/src/evolution/: evolution_step.py  limb_evolution.py  weapon_evolution.py
design-patterns/hw1/src/features/: damage_feature.py  move_feature.py
design-patterns/hw1/src/move/: move_handlers.py  move_strategies.py
design-patterns/hw1/src/simulation/: chase_engine.py  evolution_engine.py  fight_engine.py  interfaces.py  movement_selector.py  simulation.py
design-patterns/hw1/tests/: test_attack_power.py  test_creature_builder.py  test_evolution.py  test_movement.py
design-patterns/hw2/: Makefile  README.MD  pyproject.toml
design-patterns/hw2/core/: errors.py  habit.py  logs.py  repository.py  stats.py
design-patterns/hw2/infra/api/: app.py  converters.py  dependencies.py  exception_handlers.py
design-patterns/hw2/infra/api/routers/: habits.py  logs.py
design-patterns/hw2/infra/api/schemas/: habit.py  log.py  stat.py
design-patterns/hw2/infra/persistance/: in_memory.py
design-patterns/hw2/tests/api/: conftest.py  test_habits.py  test_logs.py
design-patterns/hw2/tests/core/: test_habit.py  test_stats.py
design-patterns/hw2/tests/repository/: test_in_memo_repo.py
programming-paradigms/assn-01-chichi-a/: rsg.cc
programming-paradigms/assn-02-chichi-a/: imdb.cc  imdb.h  six-degrees.cc
programming-paradigms/assn-03-chichi-a/: hashset.c  hashset.h  vector.c  vector.h
programming-paradigms/assn-04-chichi-a/: rss-news-search  rss-news-search.c  valgrind-out.txt  valgrind.rpt
programming-paradigms/assn-07-chichi-a/: scheme-examples.scm  where-am-i.scm
programming-paradigms/assn-08-chichi-a/: align.py
pwn-cybersecurity/: yan85_emulator.py
pwn-cybersecurity/modules/: dynamic_exploitaion.md  memory_errors.md  race_conditions.md  return_oriented_programming.md
